# hspec-quickcheck-classes

./: LICENSE  README.md  Test-Hspec-QuickCheck-Classes.html  doc-index.html  hspec-quickcheck-classes.cabal  hspec-quickcheck-classes.haddock  index.html
components/lib/Test/Hspec/QuickCheck/: Classes.hs
components/test/: Main.hs
src/: Test.Hspec.QuickCheck.Classes.html
