cabal-version:  3.0
name:           hspec-quickcheck-classes
version:        0.0.0.0
synopsis:       Integration between Hspec and quickcheck-classes
category:       Testing
homepage:       https://github.com/jonathanknowles/hspec-quickcheck-classes
bug-reports:    https://github.com/jonathanknowles/hspec-quickcheck-classes/issues
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      Jonathan Knowles
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

description:

  Integrates Hspec with quickcheck-classes, making it convenient for Hspec test
  suites to include tests for the lawfulness of type class instances.

extra-doc-files:
  CHANGELOG.md
  README.md

common dependency-base
    build-depends:base                  >= 4.16.4.0   && < 4.23
common dependency-hspec
    build-depends:hspec                 >= 2.11.17    && < 2.12
common dependency-QuickCheck
    build-depends:QuickCheck            >= 2.16.0.0   && < 2.19
common dependency-quickcheck-classes
    build-depends:quickcheck-classes    >= 0.6.5.0    && < 0.7

source-repository head
  type: git
  location: https://github.com/jonathanknowles/hspec-quickcheck-classes

library
  import:
    , dependency-base
    , dependency-hspec
    , dependency-QuickCheck
    , dependency-quickcheck-classes
  exposed-modules:
      Test.Hspec.QuickCheck.Classes
  hs-source-dirs:
      components/lib
  ghc-options: -Wall
  default-language: Haskell2010

test-suite test
  import:
    , dependency-base
    , dependency-hspec
    , dependency-QuickCheck
    , dependency-quickcheck-classes
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      components/test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , hspec-quickcheck-classes
  default-language: Haskell2010
